cmake_minimum_required(VERSION 3.12)

project(GuruxDLMS_lib VERSION 1.0
                  DESCRIPTION "Gurux DLMS library"
                  LANGUAGES CXX)

set(TARGET1 gurux_dlms_cpp)

add_library(${TARGET1} STATIC )

if(CMAKE_COMPILER_IS_GNUCXX)
  add_compile_options(
        -fPIC
        -Wno-unused-function
        -Wno-undef
  )
endif()

set(TARGET_SOURCES
  src/GXChargePerUnitScaling.cpp
  src/GXDLMSLimits.cpp
  src/GXXmlWriter.cpp
  src/GXDLMSCharge.cpp
  src/GXDLMSObjectFactory.cpp
  src/GXStandardObisCode.cpp
  src/GXAuthenticationMechanismName.cpp
  src/GXDLMSScriptTable.cpp
  src/GXDLMSPrimeNbOfdmPlcApplicationsIdentification.cpp
  src/GXDLMSAutoConnect.cpp
  src/GXDLMSPrimeNbOfdmPlcMacFunctionalParameters.cpp
  src/GXBytebuffer.cpp
  src/GXDLMSContextType.cpp
  src/GXSerialNumberCounter.cpp
  src/GXDLMSSapAssignment.cpp
  src/GXDLMSRegister.cpp
  src/GXDLMSGSMCellInfo.cpp
  src/GXDLMSProfileGeneric.cpp
  src/GXReplyData.cpp
  src/GXDLMSServer.cpp
  src/GXDLMSTokenGateway.cpp
  src/GXCipher.cpp
  src/GXXmlReader.cpp
  src/GXDLMSVariant.cpp
  src/GXDLMSPushObject.cpp
  src/GXDLMSScriptAction.cpp
  src/GXDLMSSeasonProfile.cpp
  src/GXDLMSLNCommandHandler.cpp
  src/GXDLMSSpecialDay.cpp
  src/GXDLMSImageTransfer.cpp
  src/GXDLMSAssociationShortName.cpp
  src/GXDLMSDisconnectControl.cpp
  src/GXDLMSGSMDiagnostic.cpp
  src/GXDLMSDayProfileAction.cpp
  src/GXDLMS.cpp
  src/GXDLMSSecureServer.cpp
  src/GXDLMSPppSetupLcpOption.cpp
  src/GXDLMSMBusMasterPortSetup.cpp
  src/GXDLMSUtilityTables.cpp
  src/GXDLMSParameterMonitor.cpp
  src/GXDLMSRegisterActivation.cpp
  src/GXDLMSScheduleEntry.cpp
  src/GXDLMSModemConfiguration.cpp
  src/GXDLMSSha1.cpp
  src/GXDLMSPppSetupIPCPOption.cpp
  src/GXCurrency.cpp
  src/GXDLMSCaptureObject.cpp
  src/GXDLMSWeekProfile.cpp
  src/GXDLMSData.cpp
  src/GXAdjacentCell.cpp
  src/GXDLMSHdlcSetup.cpp
  src/GXDLMSMBusSlavePortSetup.cpp
  src/GXDLMSIp4SetupIpOption.cpp
  src/GXDLMSMessageHandler.cpp
  src/GXDLMSObjectDefinition.cpp
  src/GXDLMSIECOpticalPortSetup.cpp
  src/GXDLMSLimiter.cpp
  src/GXDLMSCertificateInfo.cpp
  src/GXDLMSSecureClient.cpp
  src/GXXmlWriterSettings.cpp
  src/GXDLMSNotify.cpp
  src/GXDLMSActivityCalendar.cpp
  src/GXDLMSTarget.cpp
  src/GXDLMSImageActivateInfo.cpp
  src/GXDLMSPrimeNbOfdmPlcMacNetworkAdministrationData.cpp
  src/GXDLMSObjectCollection.cpp
  src/GXDLMSClock.cpp
  src/GXDLMSActionSet.cpp
  src/GXDLMSSpecialDaysTable.cpp
  src/GXDLMSActionItem.cpp
  src/GXDLMSMBusClient.cpp
  src/GXDLMSRegisterMonitor.cpp
  src/GXBitString.cpp
  src/GXDLMSDayProfile.cpp
  src/GXDLMSIp4Setup.cpp
  src/GXDLMSMonitoredValue.cpp
  src/GXDLMSSNCommandHandler.cpp
  src/GXDLMSClient.cpp
  src/GXSecure.cpp
  src/GXCommodity.cpp
  src/GXDLMSSha256.cpp
  src/GXDLMSPrimeNbOfdmPlcPhysicalLayerCounters.cpp
  src/GXAPDU.cpp
  src/GXDateTime.cpp
  src/GXDLMSTranslator.cpp
  src/GXChargeTable.cpp
  src/GXDLMSMd5.cpp
  src/GXDLMSAutoAnswer.cpp
  src/GXHelpers.cpp
  src/GXDLMSPrimeNbOfdmPlcMacSetup.cpp
  src/GXDLMSEmergencyProfile.cpp
  src/GXDLMSConverter.cpp
  src/GXDLMSMacAddressSetup.cpp
  src/GXDLMSPrimeNbOfdmPlcMacCounters.cpp
  src/GXDLMSQualityOfService.cpp
  src/GXDLMSSecuritySetup.cpp
  src/GXDLMSExtendedRegister.cpp
  src/GXDLMSSettings.cpp
  src/GXUnitCharge.cpp
  src/GXDLMSGPRSSetup.cpp
  src/GXDLMSCompactData.cpp
  src/GXDLMSSNParameters.cpp
  src/GXDLMSLNParameters.cpp
  src/GXDLMSDemandRegister.cpp
  src/GXDLMSModemInitialisation.cpp
  src/GXSNInfo.cpp
  src/GXDLMSLlcSscsSetup.cpp
  src/GXDLMSScript.cpp
  src/GXTokenGatewayConfiguration.cpp
  src/GXDLMSCredit.cpp
  src/GXDLMSObject.cpp
  src/GXStandardObisCodeCollection.cpp
  src/GXDLMSSchedule.cpp
  src/GXDLMSAccount.cpp
  src/GXDLMSPushSetup.cpp
  src/GXDLMSActionSchedule.cpp
  src/GXCreditChargeConfiguration.cpp
  src/GXApplicationContextName.cpp
  src/GXDLMSValueEventArg.cpp
  src/GXDLMSPppSetup.cpp
  src/GXDLMSAssociationLogicalName.cpp
  src/GXDLMSTranslatorStructure.cpp
  src/GXDLMSTcpUdpSetup.cpp
)

set (TARGET_HEADERS
  include/GXDLMSCertificateInfo.h
  include/GXDLMSMonitoredValue.h
  include/GXDLMSGSMCellInfo.h
  include/GXDLMSHdlcSetup.h
  include/GXDLMSScriptAction.h
  include/GXTokenGatewayConfiguration.h
  include/GXDLMSLlcSscsSetup.h
  include/GXDLMSPrimeNbOfdmPlcMacFunctionalParameters.h
  include/GXDLMSAssociationLogicalName.h
  include/GXDLMSParameterMonitor.h
  include/GXMacAvailableSwitch.h
  include/GXDLMSSNParameters.h
  include/GXXmlWriter.h
  include/GXCipher.h
  include/GXDLMSLNParameters.h
  include/GXDLMSConnectionEventArgs.h
  include/TranslatorTags.h
  include/GXDLMSPppSetupLcpOption.h
  include/GXDLMSAttribute.h
  include/errorcodes.h
  include/GXDLMSScheduleEntry.h
  include/GXDLMSLNCommandHandler.h
  include/GXHelpers.h
  include/GXDLMSAccount.h
  include/GXChargePerUnitScaling.h
  include/GXDLMSGPRSSetup.h
  include/GXXmlWriterSettings.h
  include/GXChargeTable.h
  include/GXDLMSImageActivateInfo.h
  include/GXDLMSValueEventArg.h
  include/GXDLMSSettings.h
  include/GXMacDirectTable.h
  include/GXDLMSTarget.h
  include/GXDLMSRegister.h
  include/GXDLMSMacAddressSetup.h
  include/GXDLMSAutoAnswer.h
  include/GXDLMSSeasonProfile.h
  include/GXDLMSScriptTable.h
  include/GXDLMSImageTransfer.h
  include/GXCommodity.h
  include/GXDLMSSecureServer.h
  include/GXDLMSAssociationShortName.h
  include/GXBitString.h
  include/GXDLMSSNCommandHandler.h
  include/GXDLMSPppSetup.h
  include/GXDLMSClient.h
  include/GXAuthentication.h
  include/GXAdjacentCell.h
  include/GXDLMSActivityCalendar.h
  include/GXDLMSPushObject.h
  include/GXDLMSMessageHandler.h
  include/GXDLMSSpecialDay.h
  include/GXDLMSCredit.h
  include/GXStandardObisCodeCollection.h
  include/GXBytebuffer.h
  include/GXDataInfo.h
  include/enums.h
  include/GXDLMSEmergencyProfile.h
  include/GXTime.h
  include/GXDLMSIECOpticalPortSetup.h
  include/GXDLMSExtendedRegister.h
  include/GXDLMSConverter.h
  include/GXUnitCharge.h
  include/GXSerialNumberCounter.h
  include/GXDLMSLimits.h
  include/GXDLMSSecuritySetup.h
  include/GXDLMSMBusClient.h
  include/GXDLMSMBusMasterPortSetup.h
  include/GXDLMSIp4SetupIpOption.h
  include/GXDLMSIp4Setup.h
  include/GXDLMSVariant.h
  include/GXDLMSPushSetup.h
  include/GXDLMSDisconnectControl.h
  include/GXXmlReader.h
  include/GXDLMSWeekProfile.h
  include/TranslatorGeneralTags.h
  include/chipperingenums.h
  include/GXDLMSSecureClient.h
  include/GXDLMSObjectCollection.h
  include/GXDLMSCaptureObject.h
  include/GXDLMSSha1.h
  include/GXMacPhyCommunication.h
  include/IGXDLMSBase.h
  include/GXDLMSServer.h
  include/GXAuthenticationMechanismName.h
  include/GXDLMSModemConfiguration.h
  include/GXDLMSValueEventCollection.h
  include/GXDLMSPppSetupIPCPOption.h
  include/GXDLMSLimiter.h
  include/GXReplyData.h
  include/GXDLMSSpecialDaysTable.h
  include/GXDLMSScript.h
  include/GXSNInfo.h
  include/GXDLMSObjectFactory.h
  include/GXDLMSObject.h
  include/TranslatorStandardTags.h
  include/GXDLMSPrimeNbOfdmPlcMacCounters.h
  include/GXDLMSTranslatorStructure.h
  include/GXDLMSSchedule.h
  include/GXDLMSSha256.h
  include/GXDLMSActionSet.h
  include/GXDLMSPrimeNbOfdmPlcPhysicalLayerCounters.h
  include/GXDLMSDemandRegister.h
  include/GXAPDU.h
  include/GXDLMSUtilityTables.h
  include/GXSecure.h
  include/GXDLMSCharge.h
  include/GXApplicationContextName.h
  include/GXDLMSSapAssignment.h
  include/GXDLMSQualityOfService.h
  include/GXDateTime.h
  include/GXDLMSContextType.h
  include/GXDLMSTranslator.h
  include/GXDLMSAutoConnect.h
  include/GXDate.h
  include/GXDLMSProfileGeneric.h
  include/GXDLMSPrimeNbOfdmPlcMacSetup.h
  include/GXDLMSDayProfile.h
  include/GXDLMSDayProfileAction.h
  include/GXMacMulticastEntry.h
  include/GXDLMSObjectDefinition.h
  include/GXDLMSTcpUdpSetup.h
  include/GXDLMSModemInitialisation.h
  include/GXDLMSPrimeNbOfdmPlcApplicationsIdentification.h
  include/GXDLMSClock.h
  include/GXCreditChargeConfiguration.h
  include/GXDLMSCompactData.h
  include/GXServerReply.h
  include/TranslatorSimpleTags.h
  include/OBiscodes.h
  include/GXDLMS.h
  include/GXDLMSMd5.h
  include/GXDLMSTokenGateway.h
  include/GXDLMSActionSchedule.h
  include/GXDLMSActionItem.h
  include/GXDLMSRegisterMonitor.h
  include/GXDLMSData.h
  include/GXDLMSLongTransaction.h
  include/GXDLMSPrimeNbOfdmPlcMacNetworkAdministrationData.h
  include/GXDLMSRegisterActivation.h
  include/GXCurrency.h
  include/GXDLMSGSMDiagnostic.h
  include/GXDLMSNotify.h
  include/GXDLMSMBusSlavePortSetup.h
  include/GXStandardObisCode.h
  include/GXAttributeCollection.h
)

target_sources( ${TARGET1} PRIVATE
     ${TARGET_SOURCES}
     ${TARGET_HEADERS}
)
